namespace java com.aries.hermes.idl.service
include 'dto.thrift'
service TopicServer{
    string ping()
}
